# rust-crates-index

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: cargo.yml
examples/: get_versions_cli.rs  list_recent_versions.rs  sparse_http_reqwest.rs  sparse_http_ureq.rs  update_and_get_latest.rs  update_and_get_most_recent_version.rs
src/: bare_index.rs  cache.rs  changes.rs  config.rs  dedupe.rs  dirs.rs  error.rs  index.rs  lib.rs  names.rs  sparse.rs  sparse_index.rs  types.rs
src/git/: changes.rs  config.rs  impl_.rs  mod.rs  test.rs
tests/: crates_index.rs  mem.rs
tests/bare_index/: mod.rs
tests/git/: mod.rs
tests/names/: mod.rs
tests/sparse_index/: mod.rs
tests/testdata/: autocfg.txt  crates-index.txt
tests/testdata/sparse_registry_cache/cargo_home/registry/index/index.crates.io-6f17d22bba15001f/.cache/au/to/: autocfg
