[package]
name = "crates-index"
description = "Library for retrieving and interacting with the crates.io index"
version = "1.0.0"
homepage = "https://lib.rs/crates-index"
authors = ["Corey Farwell <coreyf@rwell.org>", "Kornel <kornel@geekhood.net>"]
keywords = ["packaging", "index", "dependencies", "crate", "meta"]
categories = ["development-tools", "database"]
repository = "https://github.com/frewsxcv/rust-crates-index"
license = "Apache-2.0"
documentation = "https://docs.rs/crates-index/"
edition = "2021"
rust-version = "1.60"

[[example]]
name = "sparse_http_reqwest"
required-features = ["sparse-http"]

[[example]]
name = "sparse_http_ureq"
required-features = ["sparse-http"]

[dependencies]
git2 = { version = "0.17", default-features = false, optional = true }
gix = { version = "0.48.0", default-features = false, features = ["max-performance-safe", "blocking-network-client"], optional = true }
hex = { version = "0.4.3", features = ["serde"] }
home = "0.5.4"
http = { version = "0.2", optional = true }
memchr = "2.5.0"
rayon = { version = "1.7.0", optional = true }
rustc-hash = "1.1.0"
semver = "1.0.17"
serde = { version = "1.0.160", features = ["rc"] }
serde_derive = "1.0.160"
serde_json = "1.0.96"
smol_str = { version = "0.2.0", features = ["serde"] }
toml = "0.7.3"

[dev-dependencies]
tempfile = "3.5.0"
cap = "0.1.2"
ureq = { version = "2.7.1", features = ["http-interop"] }
reqwest = { version = "0.11.18", features = ["blocking", "gzip"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
features = ["sparse-http"]

[features]
default = ["git-index", "https", "parallel"]
changes = ["git-index"]
git-index = ["dep:git2", "dep:gix"]
https = ["git-index", "git2?/https", "gix?/blocking-http-transport-curl"]
parallel = ["dep:rayon"]
vendored-openssl = ["git-index", "git2/vendored-openssl"]
ssh = ["git-index", "git2?/ssh"] # at this time, `gix` does not need feature toggles for this as the `ssh` program is used. Native support is planned to match `git2`.
sparse-http = ["dep:http"]

[badges]
maintenance = { status = "looking-for-maintainer" }
